--- a/style.css
+++ b/style.css
@@ -1,134 +1,346 @@
-@import url('https://fonts.googleapis.com/css?family=Lobster');
-html,
-body {
-  height: cover;
-  margin: 0;
-  font-family: Lobster, cursive, sans-serif;
-  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+@import url('https://fonts.googleapis.com/css?family=Righteous');
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+body{
+	font-family: Montserrat, sans-serif;
 }
 
-.container-fluid { 
-margin-top: 22px;
-height: cover;
+.bgimage {
+	background:  url('../svg/bg.svg');
+	background-size: 100% 100%;
+	background-attachment: fixed;
+	width: 100%;
+	height: 700px;
 }
 
-h1 { 
-  text-align: center; 
-  margin-bottom: 38px; 
-  color: #fff; 
+.headerset{
+	padding-top: 220px;
+	box-sizing: border-box;
 }
 
-h2 { 
-  text-align: center; 
-  margin-bottom: 30px; 
-  color: #fff; 
+.headerset h1{
+	font-size: 50px;
+	color: #981BCC;
+}
+
+.headerset h3{
+	font-size: 35px;
+}
+
+ .navbar{
+ 	width: 100%;
+ 	background-color: rgba(183, 11, 255, .8); 
+ }
+
+
+.menu a{
+    font-weight: bold;
+	font-size: 15px;
+	color: #fff;
+	word-spacing: 10px;
+	letter-spacing: 1px;
+	display: inline-block;
+	text-shadow: 0px 0px;
+
+}
+
+.menu a:hover{
+	color: yellow;
+}
+
+.btn{
+	border-radius: 30px;
+	outline: currentColor;
+	-webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+
+
 }
 
 
+button:hover{
+ background-color: #981BCC;
 
-div {
-  display: inline-block;
-  line-height: 1;
-  padding: 20px;
-  font-size: 40px;
 }
-
-span {
-  display: block;
-  font-size: 20px;
-  color: white;
+.btn h4{
+     margin-top: 8px;
+	font-size: 18px;
+	font-weight: bold;
+	color: #981BCC;
 }
 
-#days {
-  font-size: 100px;
-  color: #db4844;
-}
-#hours {
-  font-size: 100px;
-  color: #f07c22;
-}
-#minutes {
-  font-size: 100px;
-  color: #f6da74;
-}
-#seconds {
-  font-size: 50px;
-  color: #abcd58;
+.btn h4:hover{
+	color: #fff;
+
 }
 
-.animated {
-  position: relative;
+/*-----Services-----*/
+
+.ourservices{
+	padding: 50px 0px 30px;
+	height: auto;
+	width: 100%;
 }
 
-.animated-info {
-  display: inline-block;
-  vertical-align: top;
-  margin-top: 5px;
-  min-width: 350px;
-  position: relative;
+.ourservices h1{
+	font-weight: bold;
 }
 
-.animated-item {
-  color: #f6da74;
+.rowsetting{
+	margin: 80px 0px;
+
 }
 
-.animated-item {
-  font-size: 52px;
-  line-height: inherit;
-  display: block;
-  opacity: 0;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  animation: BottomTotop 6s linear infinite 0s;
-}
-.animated-item:nth-child(2n+2) {
-  animation-delay: 2s;
-}
-.animated-item:nth-child(3n+3) {
-  animation-delay: 4s;
+.imgsetting{
+	border-radius: 50%;
+	height: 100px;
+	width: 100px;
+	 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-@keyframes BottomTotop {
-  0% {
-    opacity: 0;
-  }
-  5% {
-    opacity: 0;
-    transform: translateY(5px);
-  }
-  10% {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-  25% {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-  30% {
-    opacity: 0;
-    transform: translateY(5px);
-  }
-  80% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
+.fa-pencil-square-o{
+	margin-top: 30px;
+
 }
 
-form{
-  margin-top: 25px;
-  font-size: 20px;
-  position: relative;
-  align-items: center;
-  color: #fff;
+.fa-desktop{
+	margin-top: 30px;
 }
 
-button{
-  border-radius: 5px;
-  background-color: #f6da74;
-  color: #db4844;
+.fa-users{
+	margin-top: 30px;
+}
+
+
+.rowsetting h2{
+	margin-top: 20px;
+	font-weight: bold;
+	font-size: 30px;
+}
+.rowsetting p{
+	padding: 10px;
+	color: #6c757d;
+}
+
+/*-----portfolio-----*/
+.portfolio{
+	height: auto;
+	width: 100%;
+	padding: 50px 0px 50px;
+}
+
+.portfilio h1{
+	font-size: 50px;
+	font-weight: bold;
+}
+
+.card{
+	margin-top: 30px;
+	 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/*-----Myteam-----*/
+
+.myteam{
+	width: 100%;
+	height: auto;
+	padding: 60px 0px 30px;
+}
+
+.myteam h1{
+	font-size: 50px;
+	font-weight: bold;
+}
+
+.teamsetting{
+	margin-top: 40px;
+
+}
+
+
+/*-----Footer-----*/
+.footer{
+	height: 50px;
+}
+.footer h6{
+	line-height: 50px;
+}
+
+
+/*-----contact-----*/
+.contact{
+	width: 100%;
+	height: auto;
+	margin: 0px;
+}
+.main{
+	        align-items: center;
+			background-color: #222;
+			box-shadow: 1px 2px 5px #555;
+		}
+		.info{
+			width: 100%;
+			text-shadow: 1px 1px 1px #222;
+			color: #fff;
+			font-size: 20px;
+		}
+		.form-box{
+			align-items: center;
+			padding: 10px;
+			margin-left: 15px
+		}
+		label{
+			color: #fff;
+			font-size: 18px;
+		}
+		.inp,.msg-box{
+			width: 70%;
+			padding: 10px;
+			margin-top: 4px;
+			margin-bottom: 5px;
+			border-radius: 5px;
+			border: 2px solid #B70BFF;
+			font-weight: bold;
+			color: #B70BFF;
+			border-right: 15px solid #B70BFF;
+			border-left: 15px solid #B70BFF;
+			resize: none;
+		}
+		.msg-box{
+			height: 80px;
+		}
+		.inp:focus,.msg-box:focus{
+			outline: none;
+			border: 2px solid navy;
+			border-right: 15px solid navy;
+			border-left: 15px solid navy;
+		}
+		.sub-btn{
+			width: 70%;
+			padding: 10px;
+			border-radius: 5px;
+			margin-top: 5px;
+			border: none;
+			background: linear-gradient(#B70BFF,#800000);
+			cursor: pointer;
+			color: #fff;
+			font-size: 20px;
+			text-shadow: 1px 1px 1px #444;
+		}
+		.sub-btn:hover{
+			background: linear-gradient(#800000,#B70BFF);
+			opacity: 0.8;
+			transition: all ease-out 0.2s;
+		}
+		.sub-btn:focus{
+			outline: none;
+		}
+		
+
+/*-----Responsive-----*/
+@media(min-width: 992px){
+
+}
+
+@media(min-width: 768px)and (max-width: 991px){
+	.bgimage {
+	background-size: 100%;
+	width: 100%;
+	height: auto;
+}
+.headerset{
+	padding-top: 120px;
+	box-sizing: border-box;
+}
+
+.headerset h1{
+	font-size: 12px;
+	color: #981BCC;
+}
+
+.headerset h3{
+	font-size: 5px;
+}
+	.main{
+				width: 90%;
+			}
+}
+
+@media(min-width: 575)and (max-width: 767){
+	.bgimage {
+	width: 100%;
+}
+.headerset{
+	padding-top: 120px;
+	box-sizing: border-box;
+}
+
+.headerset h1{
+	font-size: 12px;
+	color: #981BCC;
+}
+
+.headerset h3{
+	font-size: 5px;
+}
+}
+
+@media(min-width: 460)and (max-width: 574){
+	.bgimage {
+	background:  url('../svg/bg.svg');
+	background-size: 100% 100%;
+	background-attachment: fixed;
+	width: 100%;
+}
+.headerset{
+	padding-top: 80px;
+	box-sizing: border-box;
+}
+
+.headerset h1{
+	font-size: 20px;
+	color: #981BCC;
+}
+
+.headerset h3{
+	font-size: 10px;
+}
+}
+@media (max-width: 479px){
+.bgimage {
+	background:  url('../svg/bg.svg');
+	background-size: 100%;
+	background-attachment: fixed;
+	overflow: hidden;
+	height: 210px;
+	margin-right: 0px;
+	
+}
+.headerset{
+	padding-top: 95px;
+	box-sizing: border-box;
+}
+
+.headerset h1{
+	font-size: 18px;
+	color: #981BCC;
+}
+
+.headerset h3{
+	font-size: 12px;
+}
+.navbar{
+	width: 100%;
+}
+.btn h4{
+	font-size: 10px;
+	font-weight: bold;
+	color: #981BCC;
+}
+.menu{
+	width: 100%
+}
+.main{
+				width: 90%;
+			}
 }
