--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 body{
-	font-family: Montserrat, sans-serif;
+	font-family: Righteous, sans-serif;
 }
 
 .bgimage {
